# realized

./: .editorconfig  .pre-commit-config.yaml  .scrutinizer.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yaml  pyproject.toml
.github/: settings.yml
.github/workflows/: bump.yaml  check-links.yaml  deploy-docs.yaml  deploy-packages.yaml  please-test.yaml  pull-request.yaml  push.yaml  review.yaml  sync-tags.yaml  test.yaml
docs/: SUMMARY.md  query-dsl.md  query.md  ref.md
realized/: __init__.py  _core.py  _internal.py  _meta.py  errors.py  instants.py
realized/biochem/: registries.py  well_sets.py  wells.py
realized/dt/: __init__.py  durations.py  instants.py  intervals.py  repeats.py
realized/misc/: coordinates.py  quantities.py
tests/dt/: __init__.py  test_instants.py
